src/App.css
.article-content {
    line-height: 1.6;
    font-size: 1rem;
    padding: 1rem;
    margin: 0 auto;

    h1 {
        font-size: 2rem;
        font-weight: bold;
        margin-bottom: 1rem;
    }
    h2 {
        font-size: 1.75rem;
        font-weight: bold;
        margin-top: 1.5rem;
        margin-bottom: 0.75rem;
    }
    h3 {
        font-size: 1.5rem;
        font-weight: 600;
        margin-top: 1rem;
        margin-bottom: 0.75rem;
    }
    h4 {
        font-size: 1.25rem;
        font-weight: 500;
        margin-top: 1rem;
        margin-bottom: 0.75rem;
    }
    p {
        margin-bottom: 1rem;
    }
    a {
        color: #0ea5e9;
        text-decoration: none;
        border-bottom: 1px dotted #0ea5e9;
        &:hover {
            color: #d14836;
            border-bottom: 1px solid #d14836;
        }
    }
    ul {
        list-style: initial;
        margin: initial;
        padding: initial;
    }
}
.article-image {
    display: block;
    max-width: 100%;
    margin: 0 auto 1rem;
}
.toc {
    margin-bottom: 1rem;
    padding: 0.5rem;
}
.toc h4 {
    margin-top: 0;
    font-size: 1.3rem;
}
.toc ul {
    list-style: none;
    padding-left: 10px;
}
.toc li {
    margin-bottom: 0.25rem;
}

.mantine-Timeline-itemTitle {
    color: white;
}

